--- a/src/pages/users/users.html
+++ b/src/pages/users/users.html
@@ -1,11 +1,17 @@
+<!--
+  Generated template for the UsersPage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
 <ion-header>
+
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Users</ion-title>
   </ion-navbar>
+
 </ion-header>
+
 
 <ion-content padding>
   <h3>Registered Users</h3>
