Added fingerpint auth boilerplate code

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,10 +8,6 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Registered Users</h3>
-  <ul>
-    <li *ngFor="let user of users">
-      <p>{{user.name}}</p>
-    </li>
-  </ul>
+  <h3>Home Page</h3>
+
 </ion-content>
