HotFix: rssi and send parts now show only when connected

--- a/src/pages/bluetooth/bluetooth.html
+++ b/src/pages/bluetooth/bluetooth.html
@@ -31,7 +31,7 @@
 </ul>
 <p> {{message}} </p>
 <button ion-button round (click)="onBtnConnectClick()">Connect</button>
-<div ng-if="isConnected">
+<div *ngIf="isConnected">
   <p>RSSI:{{rssi}}</p>
   <button ion-button round (click)="onBtnWriteClick()">Send</button>
   <p>Send Message:{{bluetoothMessageSend}}</p>
