updating attendance from firebase working

--- a/src/pages/bluetooth/bluetooth.html
+++ b/src/pages/bluetooth/bluetooth.html
@@ -35,5 +35,6 @@
   <p>RSSI:{{rssi}}</p>
   <button ion-button round (click)="onBtnWriteClick()">Send</button>
   <p>Send Message:{{bluetoothMessageSend}}</p>
+  <p>Recieved Message:{{recieved}}</p>
 </div>
 </ion-content>
