--- a/src/pages/users/users.html
+++ b/src/pages/users/users.html
@@ -20,7 +20,7 @@
   <h3>Registered Users</h3>
   <ul>
     <li *ngFor="let user of users">
-      <p>{{user.name}}</p>
+      <p>{{user.name}} : {{user.tt}}:{{user.auth_level}}</p>
     </li>
   </ul>
 </ion-content>
