Added ability to add temperory access permission

--- a/src/pages/grant-access/grant-access.html
+++ b/src/pages/grant-access/grant-access.html
@@ -15,7 +15,7 @@
 
 <ion-content padding>    
     <ion-list *ngFor="let user of users">
-        <ion-item>
+        <ion-item (click)="grantAccess(user)">
           <ion-avatar item-start>
             <img src="{{user.img}}">
           </ion-avatar>
