--- a/src/pages/pending-requests/pending-requests.html
+++ b/src/pages/pending-requests/pending-requests.html
@@ -7,6 +7,9 @@
 <ion-header>
 
   <ion-navbar>
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
     <ion-title>PendingRequests</ion-title>
   </ion-navbar>
 
