--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,15 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h3>Home Page</h3>
+<ion-content padding>  
+  <ion-grid style="height: 100%">
+    <ion-row justify-content-center align-items-center style="height: 100%">
+      <img src="assets/imgs/hola.png">
+      
+    </ion-row>
+    <ion-row justify-content-center>
+      <h3>{{message}}</h3>
+    </ion-row>
+  </ion-grid>  
   
-  <p>{{message}}</p>
 </ion-content>
